--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -16,7 +16,8 @@
   width: 38px;
   height: 38px;
   border-radius: 50%;
-  border: 2px solid $secondarycolor;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  // border: 2px solid $secondarycolor;
 }
 
 .avatar-bordered {
