--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -1,17 +1,20 @@
 .comments-container {
   width: 35%;
   position: relative;
-  h2 {
+  .fa-comments {
     position: absolute;
     right: 16px;
     top: 16px;
+    font-size: 48px;
+    color: $secondarycolor;
   }
   padding: 64px 24px 24px 24px;
 
 }
 
 .comment-container {
-  border-bottom: 1px solid $secondarycolor;
+  border-bottom: 1px solid #ced4da;
+  overflow-wrap: break-word;
   p {
     margin: 0;
   }
@@ -28,11 +31,13 @@
 .comment-details {
   p {
     margin: 0 12px;
+    font-size: 15px;
+    font-weight: 400;
   }
 }
 
-.comment-time-ago {
-  font-size: 14px;
+#comment-time-ago {
+  font-size: 13px;
 }
 
 .new-comment-container {
@@ -51,24 +56,27 @@
     border-radius: 50%;
     font-size: 16px;
     padding: 0;
-    color: $secondarycolor;
+    color: $off-white;
     position: absolute;
-    right: 72px;
-    top: 12px;
+    right: 15px;
+    top: 87px;
   }
 
   .comment-button:hover {
-    color: $darkersecondarycolor;
+    color: $secondarycolor;
     background-color: $primarycolor;
+    border: none;
   }
 
   .comment_content {
-    width: 75%;
+    width: 100%;
   }
 
   textarea {
     resize: none;
     border-radius: 24px;
-    padding-right: 64px;
+    padding: 15px;
+    height: 137px;
+    font-weight: 200;
   }
 }
