--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;800&family=Poppins:wght@100;200&family=Raleway:wght@100;300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;800&family=Poppins:wght@100;200;300;400&family=Raleway:wght@100;300;500&display=swap');
 
 @import "colors";
 
@@ -39,5 +39,5 @@ h1, h4, h5, h3 {
 
 p {
   color: $gray;
-  font-weight: light;
+  font-weight: 200;
 }
