--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -4,8 +4,8 @@
   <div class="d-flex justify-content-around w-100">
 
     <div class="d-flex flex-column align-items-end">
-      <p class="my-3">Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
-      <iframe src="<%=@resource.url%>" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <p style="font-size:13px; font-weight:400;" class= "mb-2">Note: You have to be logged into your Spotify account to listen to the full podcast.</p>
+      <iframe src="<%=@resource.url%>" width="680" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <%= render "shared/interactions" %>
     </div>
 
@@ -15,14 +15,6 @@
       <%= render "shared/new_comment_form", resource: @resource %>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <br>
   <br>
 </div>
