--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,17 +1,17 @@
-<h2><i class="fa-regular fa-comments"></i></i></h2>
+<i class="fa-regular fa-comments"></i>
 <% if resource.comments.count > 0 %>
   <% resource.comments.each do |comment| %>
 
     <div class="d-flex flex-column comment-container py-3">
 
-      <div class= "d-flex justify-content-between comment-details">
+      <div class= "d-flex justify-content-between align-items-center comment-details">
 
         <div class="d-flex align-items-center">
           <%= image_tag "default_avatar", class: "avatar-small" %>
           <p><%= comment.user.first_name %> <%= comment.user.last_name %></p>
         </div>
 
-        <p class="comment-time-ago"><%= time_ago_in_words(comment.created_at) %> ago</p>
+        <p id="comment-time-ago"><%= time_ago_in_words(comment.created_at) %> ago</p>
 
       </div>
 
