--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,7 +9,12 @@
   justify-content: space-between;
   margin: auto;
   max-width: 1065px;
-  padding: 36px 40px;
+  padding: 16px 40px;
+}
+
+.footer-socials {
+  width: 100px;
+  margin: auto;
 }
 
 .footer-content {
