--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -1,10 +1,9 @@
 <% if resource.reviews.count > 0 %>
   <% resource.reviews.each do |review| %>
-    <div class="review-container">
+    <div class="posted-review-container">
       <p>My notes</p>
       <p><%= review.rating %></p>
-      <i class="fa-solid fa-star-sharp"></i>
-      <%# <i class="fa-light fa-star-sharp"></i> %>
+      <i class="fas fa-star"></i>
       <p><%= review.content %></p>
     </div>
     <div>
@@ -20,7 +19,7 @@
     </div>
   <% end %>
 <% else %>
-  <div class="review-container">
+  <div class="new-review-container">
     <p>My notes</p>
     <%= simple_form_for @review, url: resource_reviews_path(resource), class: "inline" do |f| %>
       <%= f.input :rating, label: false, :collection => [1, 2, 3, 4, 5], prompt: "#{current_user.first_name}, del 1 al 5, ¿qué te pareció?" %>
